--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mobx-react-devtools": "^4.2.11",
     "postcss-loader": "^1.3.3",
     "postcss-pxtorem": "^4.0.0",
+    "rimraf": "^2.6.3",
     "style-loader": "^0.16.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.4.1"
@@ -44,7 +45,9 @@
   "dependencies": {
     "antd": "^2.9.3",
     "axios": "^0.16.1",
+    "clean-webpack-plugin": "^2.0.1",
     "echarts": "^4.2.1",
+    "glob": "^7.1.3",
     "immutable": "^4.0.0-rc.12",
     "mobx": "^3.1.9",
     "mobx-react": "^4.1.8",
