--- a/package.json
+++ b/package.json
@@ -28,13 +28,17 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.28.0",
+    "http-proxy-middleware": "^0.19.1",
     "koa": "^2.2.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.1.1",
     "koa-webpack-middleware": "1.0.3",
+    "koa2-connect": "^1.0.2",
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
-    "mobx-react-devtools": "^4.2.11",
+    "mobx": "^5.9.4",
+    "mobx-react": "^5.4.3",
+    "mobx-react-devtools": "^6.1.1",
     "postcss-loader": "^1.3.3",
     "postcss-pxtorem": "^4.0.0",
     "style-loader": "^0.16.1",
@@ -46,8 +50,6 @@
     "antd": "^3.16.2",
     "axios": "^0.16.1",
     "immutable": "^4.0.0-rc.12",
-    "mobx": "^3.1.9",
-    "mobx-react": "^4.1.8",
     "moment": "^2.18.1",
     "qs": "^6.4.0",
     "react": "^15.5.4",
