--- a/package.json
+++ b/package.json
@@ -4,58 +4,64 @@
   "description": "a simple react demo use mobx",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node start.js",
-    "build": "rimraf dist && set NODE_ENV=production && webpack --progress --colors --config webpack.config.prod.js"
+    "dev": "webpack-dev-server --colors --config config/webpack.dev.conf.js",
+    "start": "cross-env NODE_ENV=dev npm run dev",
+    "build": "cross-env NODE_ENV=pro webpack -p --progress --colors --config config/webpack.prod.conf.js",
+    "mock": "cross-env NODE_ENV=mock npm run dev"
   },
   "author": "Peter",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^6.7.7",
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-import": "^1.1.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-latest": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-runtime": "^6.23.0",
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-decorators": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.4.5",
+    "antd": "^3.19.8",
+    "autoprefixer": "^9.6.0",
+    "babel-loader": "^8.0.2",
+    "babel-plugin-import": "^1.12.0",
+    "babel-preset-mobx": "^2.0.0",
     "bundle-loader": "^0.5.5",
-    "css-loader": "^0.28.0",
+    "clean-webpack-plugin": "^1.0.0",
+    "compression-webpack-plugin": "^3.0.0",
+    "cross-env": "^5.2.0",
+    "css-loader": "^1.0.1",
+    "cssnano": "^4.1.10",
     "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "html-webpack-plugin": "^2.28.0",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.19.1",
-    "koa": "^2.2.0",
-    "koa-bodyparser": "^4.2.0",
-    "koa-router": "^7.1.1",
-    "koa-webpack-middleware": "1.0.3",
-    "koa2-connect": "^1.0.2",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.3",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.7.0",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "mobx-react-devtools": "^6.1.1",
     "moment": "^2.24.0",
-    "postcss-loader": "^1.3.3",
+    "node-sass": "^4.10.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss-loader": "^3.0.0",
     "postcss-pxtorem": "^4.0.0",
-    "style-loader": "^0.16.1",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.4.1",
-    "webpack-dev-server": "^3.3.1"
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "uglifyjs-webpack-plugin": "^2.0.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.35.0",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "antd": "^3.16.2",
-    "axios": "^0.16.1",
-    "immutable": "^4.0.0-rc.12",
-    "qs": "^6.4.0",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
+    "@babel/runtime": "^7.0.0",
+    "axios": "^0.19.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-intl": "^2.8.0",
     "react-router-dom": "^4.1.1",
-    "rimraf": "^2.6.3"
+    "react-truncate": "^2.4.0"
   }
 }
